Fixed style issues in the masonry view (spacing, scaling of thumbnail images, dropdown logging) (#2830)

--- a/src/Sulu/Bundle/MediaBundle/Resources/public/css/main.css
+++ b/src/Sulu/Bundle/MediaBundle/Resources/public/css/main.css
@@ -68,21 +68,21 @@
   opacity: 1;
   border-radius: 3px;
   border: 1px solid #fff;
-  -moz-transition: top 100ms, left 100ms, opacity 100ms, box-shadow 200ms;
-  -o-transition: top 100ms, left 100ms, opacity 100ms, box-shadow 200ms;
-  -webkit-transition: top 100ms, left 100ms, opacity 100ms, box-shadow 200ms;
-  transition: top 100ms, left 100ms, opacity 100ms, box-shadow 200ms;
+  -moz-transition: opacity 100ms, box-shadow 200ms;
+  -o-transition: opacity 100ms, box-shadow 200ms;
+  -webkit-transition: opacity 100ms, box-shadow 200ms;
+  transition: opacity 100ms, box-shadow 200ms;
 }
-/* line 33, ../scss/modules/masonry-decorator.scss */
+/* line 31, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-item.loading {
   opacity: 0;
 }
-/* line 37, ../scss/modules/masonry-decorator.scss */
+/* line 35, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-item .action-navigator, .masonry-container .masonry-item .download-navigator, .masonry-container .masonry-item .play-video-navigator {
   cursor: pointer;
   color: #000;
 }
-/* line 42, ../scss/modules/masonry-decorator.scss */
+/* line 40, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-item .custom-checkbox {
   width: 0;
   margin: 0;
@@ -93,33 +93,33 @@
   -webkit-transition: width 80ms, margin 80ms;
   transition: width 80ms, margin 80ms;
 }
-/* line 50, ../scss/modules/masonry-decorator.scss */
+/* line 48, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-item:hover {
   box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.2);
 }
-/* line 53, ../scss/modules/masonry-decorator.scss */
+/* line 51, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-item:hover .custom-checkbox {
   width: 15px;
   margin-right: 8px;
 }
-/* line 58, ../scss/modules/masonry-decorator.scss */
+/* line 56, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-item:hover .masonry-info .icons > *::before {
   color: #000;
 }
-/* line 63, ../scss/modules/masonry-decorator.scss */
+/* line 61, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-item.selected {
   box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.2);
 }
-/* line 65, ../scss/modules/masonry-decorator.scss */
+/* line 63, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-item.selected .custom-checkbox {
   width: 15px;
   margin-right: 8px;
 }
-/* line 71, ../scss/modules/masonry-decorator.scss */
+/* line 69, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-item.no-image .masonry-image {
   background: #ddd;
 }
-/* line 76, ../scss/modules/masonry-decorator.scss */
+/* line 74, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-image {
   width: 100%;
   overflow: hidden;
@@ -127,30 +127,31 @@
   background: url("../img/checked.gif") repeat;
   position: relative;
 }
-/* line 84, ../scss/modules/masonry-decorator.scss */
+/* line 82, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-image .image-icon {
   color: white;
   font-size: 70px;
   margin: 30px;
 }
-/* line 90, ../scss/modules/masonry-decorator.scss */
+/* line 88, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-image .image {
   position: relative;
   left: 0;
   vertical-align: middle;
-  width: 258px;
   border-radius: 0 0 3px 3px;
-  -moz-transition: width 200ms, height 200ms, left 200ms;
-  -o-transition: width 200ms, height 200ms, left 200ms;
-  -webkit-transition: width 200ms, height 200ms, left 200ms;
-  transition: width 200ms, height 200ms, left 200ms;
+  -moz-transition: -moz-transform 200ms;
+  -o-transition: -o-transform 200ms;
+  -webkit-transition: -webkit-transform 200ms;
+  transition: transform 200ms;
 }
-/* line 104, ../scss/modules/masonry-decorator.scss */
+/* line 97, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-image:hover .image {
-  width: 270px;
-  left: -5px;
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
 }
-/* line 111, ../scss/modules/masonry-decorator.scss */
+/* line 103, ../scss/modules/masonry-decorator.scss */
 .masonry-container .edit-hint {
   width: 100%;
   height: 100%;
@@ -163,7 +164,7 @@
   -webkit-transition: opacity 200ms;
   transition: opacity 200ms;
 }
-/* line 120, ../scss/modules/masonry-decorator.scss */
+/* line 112, ../scss/modules/masonry-decorator.scss */
 .masonry-container .edit-hint::before {
   content: "";
   display: block;
@@ -176,7 +177,7 @@
   height: 100%;
   border-radius: 0 0 3px 3px;
 }
-/* line 133, ../scss/modules/masonry-decorator.scss */
+/* line 125, ../scss/modules/masonry-decorator.scss */
 .masonry-container .edit-hint span {
   display: block;
   position: absolute;
@@ -189,49 +190,50 @@
   color: #fff;
   font-size: 24px;
 }
-/* line 140, ../scss/modules/masonry-decorator.scss */
+/* line 132, ../scss/modules/masonry-decorator.scss */
 .masonry-container .edit-hint:hover {
   opacity: 1;
 }
-/* line 145, ../scss/modules/masonry-decorator.scss */
+/* line 137, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-info {
   height: 80px;
   text-align: left;
   padding: 20px 20px 0 20px;
   position: relative;
 }
-/* line 151, ../scss/modules/masonry-decorator.scss */
+/* line 143, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-info .main {
   font-size: 0;
   line-height: 18px;
   white-space: nowrap;
   overflow: hidden;
 }
-/* line 158, ../scss/modules/masonry-decorator.scss */
+/* line 150, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-info .title {
   font-size: 14px;
 }
-/* line 162, ../scss/modules/masonry-decorator.scss */
+/* line 154, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-info .description {
   font-size: 12px;
   line-height: 12px;
   color: #999;
 }
-/* line 168, ../scss/modules/masonry-decorator.scss */
+/* line 160, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-info .icons {
   position: absolute;
   bottom: 5px;
   right: 20px;
 }
-/* line 174, ../scss/modules/masonry-decorator.scss */
+/* line 166, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-info .icons > * {
+  display: inline-block;
   margin-left: 5px;
 }
-/* line 178, ../scss/modules/masonry-decorator.scss */
+/* line 171, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-info .icons > *::before {
   color: transparent;
 }
-/* line 182, ../scss/modules/masonry-decorator.scss */
+/* line 175, ../scss/modules/masonry-decorator.scss */
 .masonry-container .masonry-info .badge {
   margin-top: -11px;
   margin-right: 3px;
